public/css/style.css
:root {
	--dark-primary-color: #FFA000;
	--default-primary-color: #FFC107;
	--light-primary-color: #FFECB3;
	--text-primary-color: #212121;
	--dark-accent-color: #455A64;
	--default-accent-color: #607D8B;
	--light-accent-color: #CFD8DC;
	--text-accent-color: #FDFDFD;
	--divider-color: #E8E8E8;
}

html {
	/*
	background: url("../images/background.jpeg") no-repeat center center fixed;
    background-color: rgb(49, 80, 141);
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
    background-size: cover; */
	font-family: 'Roboto', sans-serif;
	box-sizing: border-box;
	font-size: 14px;
}

body {
	padding: 0;
	margin: 0;
	line-height: 1.6;
	background-color: var(--divider-color);
}

.grid {
	margin-top: 10em;
	margin-left: auto;
	margin-right: auto;
	max-width: 24em;
	width: 90%;
}

.grid-long {
	max-width: 35em;
}

.grid-small-margins {
	margin-top: 0em;
	margin-bottom: 2em;
}

*,
*::before,
*::after {
	box-sizing: inherit;
}

a {
	background-color: inherit;
	color: #FFFFFF;
	text-decoration: underline;
	-webkit-transition: color 0.3s;
	transition: color 0.3s;
	cursor: pointer;
}

.mainLogo {
	max-height: 300px;
}

#gitLogo {
	max-width: 300px;
	border-radius: 400px;
}

#gitLogo:hover {
	box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
}

a.primaryLink {
	color: var(--dark-primary-color);
}

#broughtBy {
	list-style-type: none;
	font-size: 30px;
	display: table;
}

#broughtBy tr:hover {
	background: var(--light-accent-color)
}

#broughtBy td {
	padding-left: 20px;
	padding-right: 20px;
}

input {
	-webkit-appearance: none;
	-moz-appearance: none;
	border: none;
	font: inherit;
	margin: 0;
	outline: none;
	padding: 0;
}

input[type='submit'] {
	cursor: pointer;
}

.noMargin {
	margin: 0;
}

.noPadding {
	padding: 0;
}

.floatRight {
	float: right;
}

.center {
	text-align: center;
	margin-left: auto;
	margin-right: auto;
	display: block;
}

.hidden {
	display: none!important;
}

.floatLeft {
	float: left;
}

.strong {
	font-weight: 500;
}

.data {
	margin-bottom: 50px;
}

.error,
.success {
	position: relative;
	margin-top: 10px;
	margin-bottom: 10px;
	width: 100%;
	margin-right: auto;
	margin-left: auto;
	display: block;
	border-radius: 5px;
	animation-fill-mode: forwards;
	z-index: 100;
}

.error {
	background: red;
	color: white;
}

.success {
	background: green;
	color: white;
}

.show-on-hover {
	/*ocupa o espaço à mesma*/
	opacity: 0;
	transition: opacity 0.3s ease-in-out;
}

.show-on-hover-parent:hover .show-on-hover,
.show-on-hover-parent:active .show-on-hover {
	opacity: 1;
	transition: opacity 0.3s ease-in-out;
}

.editProfileBackgroundParent {
	text-align: center;
	/* center everything in the container */
}

.editProfileBackground {
	display: inline-block;
	/* so the children on the same line */
	height: auto;
	margin: 20px;
	width: auto;
}

.todoMembersContainer {
	margin-top: 5px;
}

.memberLink {
	width: 30px;
	height: 30px;
	margin-right: 5px;
}

.todoMember {
	height: 30px;
	max-width: 30px;
	border-radius: 40px;
}

.todoMember:hover {
	box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
}

.userImage {
	max-height: 300px;
	max-width: 300px;
}

.largeFont {
	font-size: large;
}

#deleteUserAccount {
	font-size: 20px;
	font-weight: bold;
	display: block;
	text-align: center;
	cursor: pointer;
	margin: 0 auto;
	margin-top: 50px;
	margin-bottom: 200px;
	width: 15em;
	padding: 10px 20px;
	-webkit-border-radius: 10px;
	border-radius: 10px;
	color: var(--text-accent-color);
	-o-text-overflow: clip;
	text-overflow: clip;
	background-color: rgb(228, 17, 17);
	-webkit-box-shadow: 0 0 4px 1px rgba(0, 0, 0, 0.5);
	box-shadow: 0 0 4px 1px rgba(0, 0, 0, 0.5);
	text-shadow: -1px -1px 0 rgba(15, 73, 168, 0.66);
	-webkit-transition: background-color 0.3s;
	transition: background-color 0.3s;
}

#deleteUserAccount:hover {
	background-color: rgb(161, 0, 0);
}


/* Statistics */

.statistics {
	font-size: 20px;
	font-weight: 530;
	text-align: center;
	justify-content: center;
}

.statistics.list {
	display: inline-flex;
	flex-direction: column;
	padding: 0;
}

.statistics.value {
	height: 60px;
	width: 60px;
	line-height: 60px;
	-moz-border-radius: 50%;
	border-radius: 50%;
	background-color: black;
	color: white;
	font-size: 2em;
	display: block;
	margin: 0 auto;
}

.statistics.name {
	display: block;
	width: 10rem;
}

.user {
	display: inline;
	flex-direction: row;
}

.user .photo {
	display: block;
	margin: 0 auto;
	margin-top: 50px
}

.user .center.userImage {
	-moz-border-radius: 50%;
	border-radius: 50%;
}

.user .data {
	margin: 0 auto;
	margin-top: 70px;
	margin-bottom: 5em;
	text-align: center;
}

.user .data .parameter {
	display: inline-block;
	font-size: 20px;
	padding: 5px 10px;
	margin: 0 auto;
	width: 200px;
	-webkit-border-radius: 10px;
	border-radius: 10px;
	color: var(--text-accent-color);
	-o-text-overflow: clip;
	text-overflow: clip;
	border: 3px solid black;
}

.user .data .parameter.name {
	font-weight: bold;
	background-color: var(--dark-accent-color);
}

.user .data .parameter.specificData {
	width: 20rem;
	word-wrap: break-word;
	background-color: var(--default-accent-color);
}


/* responsive container */

.container {
	margin: 0 auto;
	word-wrap: break-word;
}

@media screen and (max-width: 677px) {
	.container {
		width: 80%;
	}
	.editProfileBackground {
		width: 90%;
	}
	body {
		margin-top: 3em;
	}
}

@media screen and (max-width: 767px) {
	.container {
		width: 90%;
	}
}

@media screen and (min-width: 768px) {
	.container {
		width: 750px;
	}
}

@media screen and (min-width: 992px) {
	.container {
		width: 960px;
	}
}

@media screen and (min-width: 1200px) {
	.container {
		width: 1250px;
	}
}


/* Material Shadows */

.shadow-1 {
	box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
}

.shadow-2 {
	box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
}

.shadow-3 {
	box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
}


/* Color pickers colors */

option:hover {
	background: transparent;
}

option.white {
	background-color: #FFFFFF;
	color: #000000;
}

option.red {
	background-color: #F44336;
	color: #FFFFFF;
}

option.orange {
	background-color: #FF9800;
	color: #FFFFFF;
}

option.yellow {
	background-color: #FFEB3B;
	color: #FFFFFF;
}

option.green {
	background-color: #4CAF50;
	color: #FFFFFF;
}

option.teal {
	background-color: #009688;
	color: #000000;
}

option.blue {
	background-color: #2196F3;
	color: #FFFFFF;
}

option.purple {
	background-color: #9C27B0;
	color: #000000;
}

option.pink {
	background-color: #E91E63;
	color: #000000;
}

option.brown {
	background-color: #795548;
	color: #000000;
}

option.grey {
	background-color: #9E9E9E;
	color: #FFFFFF;
}

